# gaze

./: .dockerignore  .env.example  .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  .rules  .secrets.baseline  AGENTS.md  AUDIT_LOG.md  AUDIT_REPORT.md  BASELINE_AUDIT.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ENHANCED_CAPABILITIES.md  LICENSE  Makefile  PROMPTS.md  README.md  SECURITY.md  SETUP_COMPLETE.md  coverage.json  mkdocs.yml  performance_analysis.md  pyproject.toml  pytest.ini  run_tests.py  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docker.yml  docs.yml  publish.yml  scorecard.yml  test.yml
config/: ablation_baseline.yaml  ablation_config.yaml  ablation_configs.yaml  ablation_matrix.yaml  ablation_reasoning_impact.yaml  ablation_tool_contributions.yaml  agentic.yaml  agentic_reasoning.yaml  agentic_tools.yaml  agentic_tools_reasoning.yaml  baseline.yaml  baseline_reasoning.yaml  config.yaml
docs/: MEDMARKS_INTEGRATION.md  ablation_study_guide.md  agentic_workflow.md  architecture.md  configuration.md  contributing.md  enhanced_multiturn_system.md  enhanced_prompt_system.md  evaluation_guide.md  examples.md  getting-started.md  guidelines.yaml  index.md  integration_update_summary.md  model_expansion_plan.md  multiturn_system.md  prompt_system.md  system_prompts.md  tools.md  troubleshooting.md  usage.md  verifiers_integration.md
docs/api/: base.md  config.md  exceptions.md  index.md  prompts.md  types.md  utils.md  verifiers.md
docs/api/models/: adapter_protocol.md  huggingface_adapter.md  lmstudio_adapter.md  openai_adapter.md
docs/api/retrieval/: image_search.md  web_search.md
docs/api/tools/: registry.md  search.md  visual.md
environments/nova_brain_mri/: README.md  conftest.py  prepare_data.py  pyproject.toml
environments/nova_brain_mri/src/nova_brain_mri/: __init__.py  __main__.py  _utils.py  cli.py  prompts.py  rewards.py
environments/nova_brain_mri/tests/: test_rewards.py
examples/agentclinic_nejm/: README.md  eval.py  run_local.sh  train.py
examples/agentclinic_nejm/data/: download.py
examples/agentclinic_nejm/src/: __init__.py  environment.py
examples/agentclinic_nejm/tests/: test_agentclinic_nejm_smoke.py
examples/gemex_thinkvg/: README.md  eval.py  prepare_data.py  run_local.sh  train.py
examples/gemex_thinkvg/src/: __init__.py  dataset.py  processor.py  schemas.py
examples/gemex_thinkvg/tests/: test_gemex_thinkvg_smoke.py
examples/huggingface_integration/: README.md  hf_model_adapter.py  hf_verifiers_example.py
examples/nova/: README.md  run_local.sh  run_medgemma.sh
examples/nova/config/: __init__.py  agentic_reasoning.yaml  agentic_tools.yaml  baseline.yaml
examples/nova/docs/: ablation_study_guide.md  agentic_workflow.md  index.md  integration_update_summary.md  (+4 more)
examples/pubmedqa/: README.md  run_local.sh
examples/verifiers_integration/: nova_example.py  quickstart.py
examples/vqa_rad/: README.md  run_local.sh
outputs_test/: benchmark_analysis_report.md
outputs_test/results_analysis/: aggregated_results.csv  aggregated_results.json  summary_by_approach.csv
outputs_test/statistical_analysis/: significant_results.csv  statistical_analysis_report.md  statistical_summary.json  statistical_tests.csv
outputs_test/tables/: detailed_table.tex  performance_table.tex  summary_table.tex  task_breakdown_table.tex
paper/: PAPER_GUIDE.md  README.md  RESEARCH_PROMPT.md  abstract_rcr_2026.md  main.fdb_latexmk  main.fls  main.tex  nova_experiments.aux  nova_experiments.tex  references.bib  research_results.md
paper-old/: abstract_rcr_2026.md  compile.sh  main.tex
scripts/: README.md  _common_env.sh  analyze_benchmark_results.py  analyze_results.py  build_guideline_index.sh  build_index.py  check_quality.sh  comparison.py  create_parallel_benchmark.py  download_nova.py  eval_nova.sh  evaluate.py  gather_results.py  generate_figures.py  generate_latex_tables.py  inference.py  model_list.sh  parallel_benchmark_helper.py  plot_results.py  run_baseline_benchmark.sh  run_baseline_configs.sh  run_comprehensive_benchmark.sh  run_comprehensive_tests.py  run_full_benchmarks.sh  run_full_benchmarks_parallel.sh  run_multiturn_benchmark.sh  run_nova_evaluation.py  run_retrieval_benchmark.sh  run_tests.sh  run_visual_benchmark.sh  run_web_search_benchmark.sh  setup_check.py  setup_dev.sh  smoke_test.sh  statistical_analysis.py  update_metrics_posthoc.py  validate_metrics.py  visualize_samples.py
src/gaze/: __init__.py  __main__.py  _frozen.py  _image.py  _schema_skeleton.py  base.py  cache.py  config.py  exceptions.py  types.py
src/nova_retrieval_vlm/: __init__.py  api_serialization.py  cli.py  cli_new.py  config.py  schemas.py  tensor_ops.py  types.py
src/radiant_harness/: __init__.py  __main__.py  _frozen.py  base.py  cache.py  config.py  exceptions.py  protocols.py  types.py
tests/: conftest.py  test_adapters.py  test_agentclinic_nejm.py  test_agentic.py  test_agentic_processor.py  test_agentic_tool_messages.py  test_architecture_regressions.py  test_audit_findings.py  test_base_coverage.py  test_base_coverage_ext.py  test_base_processor.py  test_batch_processing_utils.py  test_bbox_normalization.py  test_cache.py  test_cache_coverage.py  test_caption_negation.py  test_cli.py  test_clinical_audit_fixes.py  test_clinical_safety.py  test_clinical_safety_regressions.py  test_config_isolation.py  test_coord_space_tracking.py  test_coverage_image_search.py  test_coverage_lmstudio.py  test_coverage_mixin.py  test_coverage_models_init.py  test_coverage_openai_adapter.py  test_credential_scrubbing.py  test_edge_cases_and_stress.py  test_evaluation.py  test_evaluation_integrity.py  test_evaluation_metrics.py  test_gemex_hierarchy_validation.py  test_gemex_location.py  test_gemex_rewards.py  test_gemex_schema_env.py  test_harness_smoke.py  test_high_level_api.py  test_honest_user_agent.py  test_huggingface_adapter.py  (+60 more)
(+233 files in other folders)
