[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["examples/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # bandit (security)
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate (commented code)
    "PL",  # pylint
    "PERF", # perflint
]
ignore = [
    "S101",  # assert usage (common in tests)
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLR0911", # too many return statements
    "PLR2004", # magic value used in comparison
    "F722",  # syntax error in forward annotation (jaxtyping)
    "F821",  # undefined name (jaxtyping shape annotations)
    "PLC0415", # import should be at top level (legitimate uses in functions)
    "E501",  # line too long (LaTeX strings, etc.)
    "PTH123", # use pathlib (many legitimate open() uses)
    "PERF203", # try-except in loop (sometimes necessary)
    "SIM116", # use dict instead of if-elif (sometimes clearer as if-elif)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004", "PLC0415", "E402", "ARG001"]
"scripts/**/*.py" = ["T201", "S602", "S603", "PLW1510", "E402"]
"run_tests.py" = ["T201", "S603", "PLW1510"]
"src/radiant_harness/__main__.py" = ["T201"]  # CLI entry point uses print

[tool.ruff.lint.isort]
known-first-party = ["radiant_harness"]
force-single-line = true

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.10"
executionEnvironments = [
    { root = "src" },
    { root = "tests", extraPaths = ["src"] },
    { root = "scripts", extraPaths = ["src"] }
]
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = false
reportUnusedClass = false
reportUnusedFunction = false
reportDuplicateImport = true
reportUnnecessaryTypeIgnoreComment = false
reportUnknownArgumentType = "warning"
reportUnknownAttribute = "warning"
reportUnknownMemberType = "warning"
reportUnknownParameterType = "warning"
reportUnknownVariableType = "warning"
reportUnknownLambdaType = "warning"
reportOptionalMemberAccess = "warning"
reportUntypedBaseClass = "warning"
reportIncompatibleMethodOverride = "warning"
reportCallIssue = "warning"
reportReturnType = "warning"
reportArgumentType = "warning"
exclude = [
    "src/radiant_harness/models/huggingface_adapter.py",
    "src/radiant_harness/models/openai_adapter.py",
    "src/radiant_harness/tools/image_ops.py",
    "src/radiant_harness/verifiers",
]

[tool.pyright.diagnosticSeverityOverrides]
reportOptionalMemberAccess = "warning"
reportAttributeAccessIssue = "warning"
reportGeneralTypeIssues = "warning"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --tb=short"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["radiant_harness"]
omit = [
    "*/tests/*",
    "*/scripts/*",
    "*/migrations/*",
    # Optional/external modules - require external services or optional dependencies
    "*/huggingface_adapter.py",
    "*/openai_adapter.py",
    "*/retrieval/*",
    "*/tools/search.py",
    "*/tools/visual.py",
    "*/verifiers/*",
    "*/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[project]
authors = [
    {name = "Research Team", email = "research@example.com"},
]
license = {text = "MIT"}
requires-python = ">=3.10,<4.0"
dependencies = [
    # Core runtime
    "loguru",
    "beartype",
    "pillow",
    "numpy",
    "openai",
    "httpx",
    "requests",
    "aiohttp",
    "minijinja>=2.12.0",
    "verifiers",
    "tenacity>=9.1.2",
]
name = "radiant-harness"
version = "0.1.0"
description = "Radiant Harness: standalone agentic tool harness for VLMs (radiology-focused)"
readme = "README.md"

[project.scripts]

[project.optional-dependencies]
nova = [
    "torch",
    "torchvision",
    "datasets",
]
medmarks = [
    "verifiers>=0.1.6",
    "prime>=0.3.35",
    "datasets>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-benchmark",
    "ruff",
    "pyright",
    "pre-commit",
    "jupyterlab",
    "ipywidgets",
    "typeguard",
    "bandit",
    "safety",
]
rl = [
    "datasets",
    "transformers",
    "torch",
    "accelerate",
]
