[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/radiant_harness"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["examples/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # bandit (security)
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate (commented code)
    "PL",  # pylint
    "PERF", # perflint
]
ignore = [
    "S101",  # assert usage (common in tests)
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLR0911", # too many return statements
    "PLR2004", # magic value used in comparison
    "F722",  # syntax error in forward annotation (jaxtyping)
    "F821",  # undefined name (jaxtyping shape annotations)
    "PLC0415", # import should be at top level (legitimate uses in functions)
    "E501",  # line too long (LaTeX strings, etc.)
    "PTH123", # use pathlib (many legitimate open() uses)
    "PERF203", # try-except in loop (sometimes necessary)
    "SIM116", # use dict instead of if-elif (sometimes clearer as if-elif)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004", "PLC0415", "E402", "ARG001", "ARG002", "ARG005", "N802", "N811"]
"scripts/**/*.py" = ["T201", "S602", "S603", "PLW1510", "E402"]
"src/radiant_harness/__main__.py" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["radiant_harness"]
force-single-line = true

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.10"
executionEnvironments = [
    { root = "src" },
    { root = "tests", extraPaths = ["src"] },
    { root = "scripts", extraPaths = ["src"] }
]
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = false
reportUnusedClass = false
reportUnusedFunction = false
reportDuplicateImport = true
reportUnnecessaryTypeIgnoreComment = false
reportUnknownArgumentType = "warning"
reportUnknownAttribute = "warning"
reportUnknownMemberType = "warning"
reportUnknownParameterType = "warning"
reportUnknownVariableType = "warning"
reportUnknownLambdaType = "warning"
reportOptionalMemberAccess = "warning"
reportUntypedBaseClass = "warning"
reportIncompatibleMethodOverride = "warning"
reportCallIssue = "warning"
reportReturnType = "warning"
reportArgumentType = "warning"
exclude = [
    "src/radiant_harness/models/huggingface_adapter.py",
    "src/radiant_harness/models/openai_adapter.py",
    "src/radiant_harness/verifiers",
]

[tool.pyright.diagnosticSeverityOverrides]
reportOptionalMemberAccess = "warning"
reportAttributeAccessIssue = "warning"
reportGeneralTypeIssues = "warning"

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = [".", "src"]
addopts = "-v --tb=short --strict-markers -m \"not integration\""
testpaths = ["tests"]
asyncio_mode = "strict"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring real APIs (run with '-m integration')",
    "unit: marks tests as unit tests",
    "stress: marks tests as stress tests (deselect with '-m \"not stress\"')",
    "edge_case: marks tests as edge case tests",
    "performance: marks tests for performance validation",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:torch.*",
    "ignore::FutureWarning:transformers.*",
]
log_cli = false
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
source = ["radiant_harness"]
omit = [
    "*/tests/*",
    "*/scripts/*",
    "*/huggingface_adapter.py",
    "*/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[project]
name = "radiant-harness"
version = "0.1.0"
description = "Radiant Harness: standalone agentic tool harness for VLMs (radiology-focused)"
readme = "README.md"
authors = [
    {name = "Liam Chalcroft"},
]
license = {text = "MIT"}
requires-python = ">=3.10,<4.0"
dependencies = [
    "loguru>=0.7,<1",
    "beartype>=0.18,<1",
    "pillow>=10,<12",
    "numpy>=1.24,<3",
    "openai>=1.0,<3",
    "httpx>=0.25,<1",
    "aiohttp>=3.9,<4",
    "minijinja>=2.12.0,<3",
    "tenacity>=9.1.2,<10",
    "defusedxml>=0.7,<1",
]

[project.optional-dependencies]
nova = [
    "torch",
    "torchvision",
    "torchmetrics",
    "pycocotools",
    "pandas",
    "datasets",
    "sacrebleu",
    "bert-score",
    "nltk",
    "huggingface-hub",
]
medmarks = [
    "verifiers>=0.1.6,<1",
    "datasets>=2.0.0",
]
verifiers = [
    "verifiers>=0.1,<1",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "ruff",
    "pyright",
    "pre-commit",
    "verifiers>=0.1,<1",
]
rl = [
    "datasets",
    "transformers",
    "torch",
]
