[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nova-brain-mri"
version = "0.1.0"
description = "NOVA brain-MRI benchmark environment for MedMarks evaluation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Research Team", email = "research@example.com"},
]
dependencies = [
    "verifiers>=0.1.6,<1",
    "prime>=0.3.35",
    "datasets>=2.14.0,<3",
    "pillow>=10.0.0,<12",
    "numpy>=1.24.0,<3",
]

[project.scripts]
nova-brain-mri = "nova_brain_mri.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nova_brain_mri"]

[tool.hatch.metadata]
allow-direct-references = true

# MedMarks environment metadata
[tool.verifiers.environment]
loader = "nova_brain_mri:load"
display_name = "NOVA Brain MRI"
visibility = "PUBLIC"
description = "Multi-task brain MRI analysis: captioning, diagnosis, and localization"
modality = "vision"
domain = "radiology"
tasks = ["caption", "diagnosis", "localization"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
