[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nova-brain-mri"
version = "0.1.0"
description = "GAZE-powered NOVA brain-MRI evaluation environment for the Prime Intellect Environments Hub"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.13"
authors = [
    {name = "Liam Chalcroft", email = "liamchalcroft@gmail.com"},
]
tags = ["medical", "radiology", "vision", "brain-mri", "neuroimaging", "eval"]
dependencies = [
    "verifiers>=0.1.6,<1",
    "gaze-vlm>=0.1.0",
    "datasets>=2.14.0,<3",
    "pillow>=10.0.0,<12",
    "numpy>=1.24.0,<3",
]

[project.urls]
Homepage = "https://github.com/liamchalcroft/gaze"
Repository = "https://github.com/liamchalcroft/gaze"

[project.scripts]
nova-brain-mri = "nova_brain_mri.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nova_brain_mri"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 1

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
